syntax = "proto3";

package upload;

option go_package = "grpc/upload";


message MasterUploadRequest{}
message MasterUploadResponse{
    string node_ip=1;
    string node_port=2;
}
message FileInfo{
    string file_name = 1;
    string file_path = 2;
    uint64 file_size = 3;
}
message UploadFileRequest{
     oneof data{
        FileInfo file_info=1;
        bytes chunks = 2;
    }
}
message UploadFileResponse{}

message NotifyMasterRequest{
    uint32 node_id = 1;  
    FileInfo file_info=2;
}
message NotifyMasterResponse{}

message ConfirmUploadRequest{
     FileInfo file_info=1;
}
message ConfirmUploadResponse{}

service UploadService {
    rpc MasterRequestUpload (MasterUploadRequest) returns (MasterUploadResponse);
    rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
    rpc NotifyMaster(NotifyMasterRequest) returns (NotifyMasterResponse);
    rpc ConfirmUpload(ConfirmUploadRequest) returns (ConfirmUploadResponse);
}
